feat: add home mood API
